fix: Dont show Zoom popup on mobile

--- a/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
+++ b/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
@@ -55,7 +55,6 @@
     }
   
     @media screen and (max-width: 600px) {
-      left: 10px;
-      width: unset;
+      display: none;
     }
   }
